Fixed chef z-indexing.

--- a/css/person.css
+++ b/css/person.css
@@ -2,7 +2,7 @@
     position: absolute;
     left: 400px;
     top: 175px;
-    z-index: 15;
+    z-index: 16;
 }
 
 #logistics-chef {
